# SimpleDemoToUseJIT

./: CMakeLists.txt  README.md  main.cpp
precompiled/: equal.cpp
